parslers-benchmark/src/tests/invalid/syntaxErr/variables/varNoName.wacc
# variable declaration missing variable name

# Output:
# #syntax_error#

# Exit:
# 100


# Program:

begin
  int = 42
end
